
[TestParseTypeAnnNoErrors/FuncWithoutParams - 1]
optional.Option[github.com/escalier-lang/escalier/internal/ast.TypeAnn]{
    &ast.FuncTypeAnn{
        TypeParams: nil,
        Params:     {
        },
        Return: &ast.NumberTypeAnn{
            span: ast.Span{
                Start: ast.Location{Line:1, Column:9},
                End:   ast.Location{Line:1, Column:15},
            },
            inferredType: nil,
        },
        Throws: nil,
        span:   ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:15},
        },
        inferredType: nil,
    },
}
---

[TestParseTypeAnnNoErrors/StringLiteralTypeAnn - 1]
optional.Option[github.com/escalier-lang/escalier/internal/ast.TypeAnn]{
    &ast.LitTypeAnn{
        Lit: &ast.StrLit{
            Value: "hello",
            span:  ast.Span{
                Start: ast.Location{Line:1, Column:1},
                End:   ast.Location{Line:1, Column:8},
            },
        },
        span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:8},
        },
        inferredType: nil,
    },
}
---

[TestParseTypeAnnNoErrors/NumberTypeAnn - 1]
optional.Option[github.com/escalier-lang/escalier/internal/ast.TypeAnn]{
    &ast.NumberTypeAnn{
        span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:7},
        },
        inferredType: nil,
    },
}
---

[TestParseTypeAnnNoErrors/StringTypeAnn - 1]
optional.Option[github.com/escalier-lang/escalier/internal/ast.TypeAnn]{
    &ast.StringTypeAnn{
        span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:7},
        },
        inferredType: nil,
    },
}
---

[TestParseTypeAnnNoErrors/NumberLiteralTypeAnn - 1]
optional.Option[github.com/escalier-lang/escalier/internal/ast.TypeAnn]{
    &ast.LitTypeAnn{
        Lit: &ast.NumLit{
            Value: 5,
            span:  ast.Span{
                Start: ast.Location{Line:1, Column:1},
                End:   ast.Location{Line:1, Column:2},
            },
        },
        span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:2},
        },
        inferredType: nil,
    },
}
---

[TestParseTypeAnnNoErrors/FuncWithParams - 1]
optional.Option[github.com/escalier-lang/escalier/internal/ast.TypeAnn]{
    &ast.FuncTypeAnn{
        TypeParams: nil,
        Params:     {
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name:    "x",
                    Default: nil,
                    span:    ast.Span{
                        Start: ast.Location{Line:1, Column:4},
                        End:   ast.Location{Line:1, Column:5},
                    },
                    inferredType: nil,
                },
                Optional: false,
                TypeAnn:  {
                    &ast.NumberTypeAnn{
                        span: ast.Span{
                            Start: ast.Location{Line:1, Column:7},
                            End:   ast.Location{Line:1, Column:13},
                        },
                        inferredType: nil,
                    },
                },
            },
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name:    "y",
                    Default: nil,
                    span:    ast.Span{
                        Start: ast.Location{Line:1, Column:15},
                        End:   ast.Location{Line:1, Column:16},
                    },
                    inferredType: nil,
                },
                Optional: false,
                TypeAnn:  {
                    &ast.StringTypeAnn{
                        span: ast.Span{
                            Start: ast.Location{Line:1, Column:18},
                            End:   ast.Location{Line:1, Column:24},
                        },
                        inferredType: nil,
                    },
                },
            },
        },
        Return: &ast.BooleanTypeAnn{
            span: ast.Span{
                Start: ast.Location{Line:1, Column:29},
                End:   ast.Location{Line:1, Column:36},
            },
            inferredType: nil,
        },
        Throws: nil,
        span:   ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:36},
        },
        inferredType: nil,
    },
}
---

[TestParseTypeAnnNoErrors/FuncWithTypeParams - 1]
optional.Option[github.com/escalier-lang/escalier/internal/ast.TypeAnn]{
    &ast.FuncTypeAnn{
        TypeParams: {
            {
                {
                    Name:       "T",
                    Constraint: {
                        &ast.NumberTypeAnn{
                            span: ast.Span{
                                Start: ast.Location{Line:1, Column:7},
                                End:   ast.Location{Line:1, Column:13},
                            },
                            inferredType: nil,
                        },
                    },
                    Default: nil,
                },
                {
                    Name:       "U",
                    Constraint: {
                        &ast.StringTypeAnn{
                            span: ast.Span{
                                Start: ast.Location{Line:1, Column:18},
                                End:   ast.Location{Line:1, Column:24},
                            },
                            inferredType: nil,
                        },
                    },
                    Default: nil,
                },
            },
        },
        Params: {
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name:    "x",
                    Default: nil,
                    span:    ast.Span{
                        Start: ast.Location{Line:1, Column:26},
                        End:   ast.Location{Line:1, Column:27},
                    },
                    inferredType: nil,
                },
                Optional: false,
                TypeAnn:  {
                    &ast.TypeRefTypeAnn{
                        Name:     "T",
                        TypeArgs: {
                        },
                        span: ast.Span{
                            Start: ast.Location{Line:1, Column:29},
                            End:   ast.Location{Line:1, Column:30},
                        },
                        inferredType: nil,
                    },
                },
            },
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name:    "y",
                    Default: nil,
                    span:    ast.Span{
                        Start: ast.Location{Line:1, Column:32},
                        End:   ast.Location{Line:1, Column:33},
                    },
                    inferredType: nil,
                },
                Optional: false,
                TypeAnn:  {
                    &ast.TypeRefTypeAnn{
                        Name:     "U",
                        TypeArgs: {
                        },
                        span: ast.Span{
                            Start: ast.Location{Line:1, Column:35},
                            End:   ast.Location{Line:1, Column:36},
                        },
                        inferredType: nil,
                    },
                },
            },
        },
        Return: &ast.BooleanTypeAnn{
            span: ast.Span{
                Start: ast.Location{Line:1, Column:41},
                End:   ast.Location{Line:1, Column:48},
            },
            inferredType: nil,
        },
        Throws: nil,
        span:   ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:48},
        },
        inferredType: nil,
    },
}
---

[TestParseTypeAnnNoErrors/UnionAndIntersectionType - 1]
optional.Option[github.com/escalier-lang/escalier/internal/ast.TypeAnn]{
    &ast.UnionTypeAnn{
        Types: {
            &ast.IntersectionTypeAnn{
                Types: {
                    &ast.TypeRefTypeAnn{
                        Name:     "A",
                        TypeArgs: {
                        },
                        span: ast.Span{
                            Start: ast.Location{Line:1, Column:1},
                            End:   ast.Location{Line:1, Column:2},
                        },
                        inferredType: nil,
                    },
                    &ast.TypeRefTypeAnn{
                        Name:     "B",
                        TypeArgs: {
                        },
                        span: ast.Span{
                            Start: ast.Location{Line:1, Column:5},
                            End:   ast.Location{Line:1, Column:6},
                        },
                        inferredType: nil,
                    },
                },
                span: ast.Span{
                    Start: ast.Location{Line:1, Column:1},
                    End:   ast.Location{Line:1, Column:6},
                },
                inferredType: nil,
            },
            &ast.IntersectionTypeAnn{
                Types: {
                    &ast.TypeRefTypeAnn{
                        Name:     "X",
                        TypeArgs: {
                        },
                        span: ast.Span{
                            Start: ast.Location{Line:1, Column:9},
                            End:   ast.Location{Line:1, Column:10},
                        },
                        inferredType: nil,
                    },
                    &ast.TypeRefTypeAnn{
                        Name:     "Y",
                        TypeArgs: {
                        },
                        span: ast.Span{
                            Start: ast.Location{Line:1, Column:13},
                            End:   ast.Location{Line:1, Column:14},
                        },
                        inferredType: nil,
                    },
                },
                span: ast.Span{
                    Start: ast.Location{Line:1, Column:9},
                    End:   ast.Location{Line:1, Column:14},
                },
                inferredType: nil,
            },
        },
        span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:14},
        },
        inferredType: nil,
    },
}
---

[TestParseTypeAnnNoErrors/IntersectionType - 1]
optional.Option[github.com/escalier-lang/escalier/internal/ast.TypeAnn]{
    &ast.IntersectionTypeAnn{
        Types: {
            &ast.TypeRefTypeAnn{
                Name:     "A",
                TypeArgs: {
                },
                span: ast.Span{
                    Start: ast.Location{Line:1, Column:1},
                    End:   ast.Location{Line:1, Column:2},
                },
                inferredType: nil,
            },
            &ast.TypeRefTypeAnn{
                Name:     "B",
                TypeArgs: {
                },
                span: ast.Span{
                    Start: ast.Location{Line:1, Column:5},
                    End:   ast.Location{Line:1, Column:6},
                },
                inferredType: nil,
            },
            &ast.TypeRefTypeAnn{
                Name:     "C",
                TypeArgs: {
                },
                span: ast.Span{
                    Start: ast.Location{Line:1, Column:9},
                    End:   ast.Location{Line:1, Column:10},
                },
                inferredType: nil,
            },
        },
        span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:10},
        },
        inferredType: nil,
    },
}
---

[TestParseTypeAnnNoErrors/UnionType - 1]
optional.Option[github.com/escalier-lang/escalier/internal/ast.TypeAnn]{
    &ast.UnionTypeAnn{
        Types: {
            &ast.TypeRefTypeAnn{
                Name:     "A",
                TypeArgs: {
                },
                span: ast.Span{
                    Start: ast.Location{Line:1, Column:1},
                    End:   ast.Location{Line:1, Column:2},
                },
                inferredType: nil,
            },
            &ast.TypeRefTypeAnn{
                Name:     "B",
                TypeArgs: {
                },
                span: ast.Span{
                    Start: ast.Location{Line:1, Column:5},
                    End:   ast.Location{Line:1, Column:6},
                },
                inferredType: nil,
            },
            &ast.TypeRefTypeAnn{
                Name:     "C",
                TypeArgs: {
                },
                span: ast.Span{
                    Start: ast.Location{Line:1, Column:9},
                    End:   ast.Location{Line:1, Column:10},
                },
                inferredType: nil,
            },
        },
        span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:10},
        },
        inferredType: nil,
    },
}
---

[TestParseTypeAnnNoErrors/IndexedTypeWithDot - 1]
optional.Option[github.com/escalier-lang/escalier/internal/ast.TypeAnn]{
    &ast.IndexTypeAnn{
        Target: &ast.TypeRefTypeAnn{
            Name:     "A",
            TypeArgs: {
            },
            span: ast.Span{
                Start: ast.Location{Line:1, Column:1},
                End:   ast.Location{Line:1, Column:2},
            },
            inferredType: nil,
        },
        Index: &ast.LitTypeAnn{
            Lit: &ast.StrLit{
                Value: "B",
                span:  ast.Span{
                    Start: ast.Location{Line:1, Column:2},
                    End:   ast.Location{Line:1, Column:3},
                },
            },
            span: ast.Span{
                Start: ast.Location{Line:1, Column:2},
                End:   ast.Location{Line:1, Column:3},
            },
            inferredType: nil,
        },
        span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:3},
        },
        inferredType: nil,
    },
}
---

[TestParseTypeAnnNoErrors/IndexedTypeWithBrackets - 1]
optional.Option[github.com/escalier-lang/escalier/internal/ast.TypeAnn]{
    &ast.IndexTypeAnn{
        Target: &ast.TypeRefTypeAnn{
            Name:     "A",
            TypeArgs: {
            },
            span: ast.Span{
                Start: ast.Location{Line:1, Column:1},
                End:   ast.Location{Line:1, Column:2},
            },
            inferredType: nil,
        },
        Index: &ast.TypeRefTypeAnn{
            Name:     "B",
            TypeArgs: {
            },
            span: ast.Span{
                Start: ast.Location{Line:1, Column:3},
                End:   ast.Location{Line:1, Column:4},
            },
            inferredType: nil,
        },
        span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:5},
        },
        inferredType: nil,
    },
}
---
